--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div class="calculator__display"></div>
-    <div class="calculator__inputs"> <button class="calculator__operator">AC</button><button class="calculator__operator">%</button><button class="calculator__operator">/</button> </div>
+    <div class="calculator__keys"> <button class="calculator__keys--operator">AC</button><button class="calculator__keys--operator">%</button><button class="calculator__keys--operator">/</button> </div>
   </body>
 </html>
