--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
     <title>iPhone calculator</title>
   </head>
   <body>
-    <div class="calculator__display"></div>
-    <div class="calculator__keys"> <button class="calculator__keys--operator">AC</button><button class="calculator__keys--operator">%</button><button class="calculator__keys--operator">/</button> </div>
+    <div class="calculator">
+      <div class="calculator__display">0</div>
+      <div class="calculator__keys">
+        <!-- ROW 1 -->
+        <button class="calculator__keys--clear color__pale-grey">AC</button>
+        <button class="calculator__keys--percent color__pale-grey">%</button> <button class="calculator__keys--divide color__orange">/</button>
+        <!-- ROW 2 -->
+        <button class="calculator__keys--number-7 color__dark-grey">7</button>
+        <button class="calculator__keys--number-8 color__dark-grey">8</button>
+        <button class="calculator__keys--number-9 color__dark-grey">9</button>
+        <button class="calculator__keys--multiply color__orange">x</button>
+        <!-- ROW 3 -->
+        <button class="calculator__keys--number-4 color__dark-grey">4</button>
+        <button class="calculator__keys--number-5 color__dark-grey">5</button>
+        <button class="calculator__keys--number-6 color__dark-grey">6</button>
+        <button class="calculator__keys--minus color__orange">-</button>
+        <!-- ROW 4 -->
+        <button class="calculator__keys--number-1 color__dark-grey">1</button>
+        <button class="calculator__keys--number-2 color__dark-grey">2</button>
+        <button class="calculator__keys--number-3 color__dark-grey">3</button>
+        <button class="calculator__keys--plus color__orange">+</button>
+        <!-- ROW 5 -->
+        <button class="calculator__keys--number-0 color__dark-grey">0</button>
+        <button class="calculator__keys--decimal-point color__dark-grey">.</button>
+        <button class="calculator__keys--equals color__orange">=</button>
+      </div>
+    </div>
   </body>
 </html>
